gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/deprecate_getVirtualFunctions.d
version https://git-lfs.github.com/spec/v1
oid sha256:d14c5bac5fdbff8976d5c7806488dd4d1a4fe0e0a1671f0e0ac0fe0a580b9950
size 506
